logs/quantumcore.contenttypes.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quantumcore'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/all'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/application'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/audio'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/fonts'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/image'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/inode'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/interface'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/message'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/model'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/multipart'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/packages'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/text'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/uri'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/video'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/x-content'...
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/data/sharedmime/x-epoc'...
Compiling './lib/python3.5/site-packages/quantumcore/contenttypes/magic.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (magic.py, line 17)
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/pymagic'...
Compiling './lib/python3.5/site-packages/quantumcore/contenttypes/pymagic/convert.py'...
***   File "./lib/python3.5/site-packages/quantumcore/contenttypes/pymagic/convert.py", line 70
    result=0L
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quantumcore/contenttypes/pymagic/magic.py'...
***   File "./lib/python3.5/site-packages/quantumcore/contenttypes/pymagic/magic.py", line 140
    offset_delta = 0L
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/quantumcore/contenttypes/registry.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (registry.py, line 12)
Listing './lib/python3.5/site-packages/quantumcore/contenttypes/tests'...
Compiling './lib/python3.5/site-packages/quantumcore/contenttypes/tests/test_globs.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (test_globs.py, line 24)
Listing './lib/python3.5/site-packages/quantumcore.contenttypes-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
